--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.28</version> <!-- Убедитесь, что версия актуальная -->
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
