--- a/.github/workflows/First build with maven.yml
+++ b/.github/workflows/First build with maven.yml
@@ -14,6 +14,11 @@ on:
   pull_request:
     branches: [ "master" ]
 
+env:
+ USERNAME: ${{secrets.USER_NAME}}
+ PASSWORD: ${{secrets.PASSWORD}}
+
+
 jobs:
   build:
 
@@ -28,4 +33,4 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: First build
-      run: mvn clean test
+      run: mvn clean test -DUSER_NAME=$USERNAME -DPASSWORD=$PASSWORD
